# Rightshero-Category

./: .env  README.md  db.sqlite3  docker-compose.yml  ec2-deployment.yaml  entrypoint.sh  pyproject.toml
api/: settings.py  urls.py
category/: admin.py  managers.py  models.py  serializers.py  tracking_service.py  urls.py  utils.py  views.py
category/management/commands/: initcategory.py
category/migrations/: 0001_initial.py
category/templates/: index.html
storage/static/category/: category.css  category.js
